@@ -1,3 +1,9 @@
+2005-10-10  Stefan Kost  <ensonic@users.sf.net>
+
+	* devhelp.xsl:
+	* gtkdoc-mkdb.in:
+	  enhance gtkdoc devhelp output (#318129)
+
 2005-10-05  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-common.pl.in:
